--- a/index.html
+++ b/index.html
@@ -42,8 +42,47 @@
 
 </div>
 
+<!-- Features -->
+<div class="container">
+    <div class="features">
+        <div class="features__item">
+            <img src="img/Features/Layer 48.png" alt="" class="features__icon">
+            <h4 class="features__title">Easily Customised</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor</div>
+        </div>
 
+        <div class="features__item">
+            <img src="img/Features/Layer 44.png" alt="" class="features__icon">
+            <h4 class="features__title">Responsive Ready</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor</div>
+        </div>
 
+        <div class="features__item">
+            <img src="img/Features/Layer 47.png" alt="" class="features__icon">
+            <h4 class="features__title">Modern Design</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+        </div>
+
+        <div class="features__item">
+            <img src="img/Features/Layer 46.png" alt="" class="features__icon">
+            <h4 class="features__title">Clean Code</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+        </div>
+
+        <div class="features__item">
+            <img src="img/Features/Layer 43.png" alt="" class="features__icon">
+            <h4 class="features__title">Ready To Ship</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+        </div>
+
+        <div class="features__item">
+            <img src="img/Features/Layer 45.png" alt="" class="features__icon">
+            <h4 class="features__title">Download For Free</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+        </div>
+    </div> <!-- /.features-->
+</div> <!-- /.container-->
+ 
 
 </body>
 </html>
